@@ -483,7 +483,8 @@ path-check: distdir
 ## of files on stdin, at least.
 	  find . -print | xargs pathchk -p); \
 	  status=$$?; \
-	  chmod -R a+w $(distdir) > /dev/null 2>&1; rm -rf $(distdir); \
+	  find $(distdir) -type d '!' -perm -200 -exec chmod u+w {} ';'; \
+	  rm -rf $(distdir); \
 	  exit $$status
 
 ## Program to use to fetch files.
