@@ -1,3 +1,11 @@
+2010-03-30  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Avoid another use of `chmod -R'.
+	* Makefile.am (path-check): To be safe, do not use `chmod -R' on
+	$(distdir) before removing it (as Solaris `chmod -R' touches
+	symlink targets).  Instead, use the cleanup strategy used in
+	distdir.am.
+
 2010-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Remove uses of @acronym and @sc.
